add adjustments and javadoc on Reading Repository, Service, Controller and Test class